Modified project settings

--- a/project.config
+++ b/project.config
@@ -1,2 +1,6 @@
 [access]
 	inheritFrom = scoring/ores
+[project]
+	description = A library for performing automatic detection of assessment classes of Wikipedia article text.
+[plugin "its-phabricator"]
+	enabled = true
